Final v18.0: Unified code, enhanced UI, interactive factory blueprint, and security hardening.

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,8 @@
-.venv/
+config.py
 __pycache__/
 *.pyc
-.DS_Store
-*.log
-# dataset/  # Uncomment if you don't want to push images
+.venv/
+.env
+dataset/
+models/*.tflite
+!models/labels.txt
