--- a/requirements.txt
+++ b/requirements.txt
@@ -5,5 +5,6 @@ requests==2.31.0
 pillow==10.2.0
 scikit-learn==1.3.2
 google-generativeai==0.8.3
+gunicorn==21.2.0
 # Note: For Raspberry Pi, install tflite-runtime separately (see README).
 # If running train.py on PC, install tensorflow==2.15.0
